Fixed broken spacing between card on the home page

--- a/src/app/portfolio/portfolio-list/portfolio-list.component.scss
+++ b/src/app/portfolio/portfolio-list/portfolio-list.component.scss
@@ -13,6 +13,14 @@ body {
   padding: 0 10px;
 }
 
+// @media screen and (max-width: 1500px) {
+//   .column {
+//     float: left;
+//     width: 50%;
+//     padding: 0 10px;
+//   }
+// }
+
 /* Clear floats after the columns */
 .row:after {
   content: "";
@@ -30,10 +38,20 @@ body {
 
 /* Responsive columns */
 @media screen and (max-width: 800px) {
-  .column  {
+  .column {
     width: 100%;
     display: block;
     margin-bottom: 20px;
     padding: 0;
   }
+  .demo-1 {
+    -webkit-line-clamp: 5;
+  }
+}
+
+.demo-1 {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 5;
+  -webkit-box-orient: vertical;
 }
